Changed layout for list of blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Doug Dominiak blog
-description: Machine Learning is fun
+description: Machine learning is fun!
 google_analytics: UA-108812820-1
